--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-prettier": "^6.0.0",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^5.1.0",
+    "gulp-sitemap": "^8.0.0",
     "gulp-uglify": "^3.0.2",
     "sass": "^1.77.4",
     "tailwindcss": "^3.4.4"
